--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>the</title>
+  <title>the</title>
+  <meta content="Embed Title" property="og:title" />
+  <meta content="Site Description" property="og:description" />
+  <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+  <meta content="https://embed.com/embedimage.png" property="og:image" />
+  <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
-<h1>the</h1>
-<p>the.</p>
+  <h1>the</h1>
+  <p>the.</p>
 </body>
 </html>
