--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>the</title>
   <meta content="Embed Title" property="og:title" />
   <meta content="Site Description" property="og:description" />
-  <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
-  <meta content="https://embed.com/embedimage.png" property="og:image" />
+  <meta content="https://gorodmi.github.io/embed/#" property="og:url" />
+  <meta content="https://media.discordapp.net/stickers/1010128810580119555.webp?size=160" property="og:image" />
   <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
