--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>the</title>
-  <meta content="Embed Title" property="og:title" />
-  <meta content="Site Description" property="og:description" />
+  <meta content="my honest:" property="og:title" />
+  <meta content="reaction" property="og:description" />
   <meta content="https://gorodmi.github.io/embed/#" property="og:url" />
   <meta content="https://media.discordapp.net/stickers/1010128810580119555.webp?size=160" property="og:image" />
   <meta content="#43B581" data-react-helmet="true" name="theme-color" />
